# mcp-pangolin

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
server/: Cargo.toml
server/src/: main.rs  pangolin_client.rs  service.rs  swagger.rs  types.rs
server/tests/: read_only_mode.rs
